unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/whistic_profile__Profile_Share_Contact__c.object-meta.xml
<CustomObject>
    <description>Links all the contacts that a given profile share was linked to</description>
    <label>Profile Share Contact</label>
    <nameField>
        <displayFormat>PSC-{000000}</displayFormat>
        <label>Profile Share Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Share Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>