unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/fields/whistic_profile__Company_Url__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Company_Url__c</fullName>
    <label>Company Url</label>
    <type>Url</type>
</CustomField>