unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/fields/whistic_profile__Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Profile Share Contacts</relationshipLabel>
    <relationshipName>Profile_Share_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>