unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/fields/whistic_profile__First_Name__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>