unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/fields/whistic_profile__Originating_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Originating_Record_Id__c</fullName>
    <label>Originating Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>