unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/fields/whistic_profile__Phone__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>