unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/fields/whistic_profile__Share__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Share__c</fullName>
    <formula>whistic_profile__Profile_Share__r.whistic_profile__Security_Profile__r.Name + &quot; (profile) - &quot; + whistic_profile__Contact_Id__r.Account.Name + &quot; Share&quot;</formula>
    <label>Share</label>
    <type>Text</type>
</CustomField>