unpackaged/main/default/objects/whistic_profile__Profile_Share_Contact__c/listViews/whistic_profile__All.listView-meta.xml
<ListView>
    <fullName>whistic_profile__All</fullName>
    <columns>NAME</columns>
    <columns>whistic_profile__Share__c</columns>
    <columns>whistic_profile__Profile_Share__c</columns>
    <columns>whistic_profile__First_Name__c</columns>
    <columns>whistic_profile__Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>